# fencepost

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.fp_demo/: run.json  summary.json
.fp_final/: run.json  summary.json
.fp_fresh/: run.json  selection.json  summary.json
.fp_new/: run.json  summary.json
.fp_real2/: run.json  summary.json
.fp_report/: summary.json
.fp_two/: run.json  selection.json  summary.json
.fp_v2/: run.json  summary.json
.pytest-peek/: test_baseline_result_is_returncurrent  test_batch_uses_one_hardened_ccurrent  test_blame_uses_student_authorcurrent  test_cli_dispatches_serve_withcurrent  test_codex_cli_generator_buildcurrent  test_codex_cli_nonzero_exit_iscurrent  test_codex_probe_agent_uses_shcurrent  test_codex_probe_rejects_questcurrent  test_codex_probe_rejects_templcurrent  test_contract_violation_is_reccurrent  test_extract_archive_rejects_scurrent  test_generator_failure_is_unrecurrent  test_initial_all_broken_guard_current  test_invalid_counter_resets_afcurrent  test_local_server_exposes_onlycurrent  test_low_authored_line_coveragcurrent  test_missing_and_old_reports_rcurrent  test_probe_targets_contract_gacurrent  test_pythonpath_includes_repo_current  test_real_gap_requires_originacurrent  test_report_v2_renders_key_fixcurrent  test_sandbox_failure_makes_runcurrent  test_survivor_cap_is_visible_acurrent  test_three_consecutive_invalidcurrent  test_triage_reuses_one_persistcurrent  test_unresolved_survivors_are_current
.pytest-v/: test_absent_test_count_never_fcurrent  (+27 more)
demo/: build_demo_repo.py
(+3252 files in other folders)
