[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fencepost"
version = "0.1.0"
description = "Execution-grounded comprehension probes for Python coursework"
requires-python = ">=3.9"

[project.optional-dependencies]
openai = ["openai>=1.66,<3"]

[project.scripts]
fencepost = "fencepost.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
